// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableRow should render correctly 1`] = `
<tr>
  <td />
</tr>
`;

exports[`BpkTableRow should render correctly with arbitrary props 1`] = `
<tr
  data-foo="bar"
  id="my-custom-id"
>
  <td />
</tr>
`;

exports[`BpkTableRow should render correctly with custom class 1`] = `
<tr
  className="my-custom-class"
>
  <td />
</tr>
`;
